# erc20-vend

./: .gitignore
python/: requirements.txt  setup.cfg  test_requirements.txt
python/erc20_vend/: __init__.py  vend.py
python/erc20_vend/data/: Vend.json  Vend.metadata.json
python/erc20_vend/unittest/: __init__.py  base.py
python/tests/: test_base.py  test_events.py  test_interfaces.py  test_lock.py  test_supply.py
solidity/: GiftableToken.sol  Makefile  Vend.sol
