[metadata]
name = erc20_vend
version = 0.0.1
description = Create ERC20 tokens the can be minted by existing ERC20 token balance
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://holbrook.no/src/erc20_vend/log.html
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
packages = 
	craft_nft
	craft_nft.runnable

#[options.entry_points]
#console_scripts =
